--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  /* padding: 0; */
+  font-family: 'Inter', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #f55a5a;
+  color: #fff;
+  width: 100%;
+  height: 60px;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  margin: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  font-size: 20px;
+}
+
+main {
+  display: flex;
+}
+
+.photo-cnt {
+  margin: 10px;
+  left: 62px;
+}
+
+.text-cnt {
+  margin: 10px;
+}
+
+h4 {
+  letter-spacing: 1px;
+  font-size: 14px;
+}
+
+span {
+  margin-left: 6px;
+  letter-spacing: 0;
+  color: #918e9b;
+  text-decoration: underline;
+}
+
+p {
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  word-spacing: 2px;
 }
